# 2048-clickstreams-demo

./: docker-compose.yml
backend/: Dockerfile  app.py  pyproject.toml
backend/src/: config.py  db.py  schemas.py
db/: init.sql
frontend/: index.html
frontend/.build/: Dockerfile.bak
frontend/js/: game_manager.js  html_actuator.js  local_storage_manager.js  nicknames.js
frontend/nginx/: nginx.conf  nginx.conf.bak
