[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["porta_simmons <rpistsovfrm@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
aioch = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
